fix for overflow in visual 5

--- a/static/css/articlesAggregation/vis5.css
+++ b/static/css/articlesAggregation/vis5.css
@@ -57,3 +57,15 @@
 .square a {
   text-decoration: none;
 }
+
+.articles a {
+  display: none;
+}
+
+.articles a:nth-child(-n+3) {
+  display: inline-block;
+}
+
+.circle:first-child .circleContents .articles a:nth-child(-n+11) {
+  display: inline-block;
+}
